Good stuff here

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -50,8 +50,8 @@ bind-key -r N run-shell "~/.local/bin/tmux-sessionizer ~/personal/harpoon"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'sainnhe/tmux-fzf'
-set -g @plugin 'yassinebridi/tmux-purpura'
-#set -g @plugin 'dracula/tmux'
+# set -g @plugin 'yassinebridi/tmux-purpura'
+# set -g @plugin 'dracula/tmux'
 
 #set -g @dracula-plugins 'cpu-usage ram-usage'
 #set -g @dracula-cpu-usage-colors 'dark_purple white'
@@ -59,6 +59,35 @@ set -g @plugin 'yassinebridi/tmux-purpura'
 #set -g @dracula-show-left-icon window
 #set -g @dracula-show-left-icon-colors 'dark_purple white'
 #set -g @dracula-ram-usage-icon "RAM"
+
+# Add custom status bar configuration that matches your zsh theme
+set -g status-style 'bg=#1a1a2e fg=#7350E0'
+set -g status-left-style 'bg=#7350E0 fg=#ffffff'
+set -g status-right-style 'bg=#CA0DDE fg=#ffffff'
+
+# Window status styling
+set -g window-status-style 'bg=#333366 fg=#9D7CD8'
+set -g window-status-current-style 'bg=#CA0DDE fg=#ffffff bold'
+set -g window-status-activity-style 'bg=#0D5FDE fg=#ffffff'
+
+# Pane borders
+set -g pane-border-style 'fg=#555577'
+set -g pane-active-border-style 'fg=#CA0DDE'
+
+# Message styling
+set -g message-style 'bg=#7350E0 fg=#ffffff'
+set -g message-command-style 'bg=#CA0DDE fg=#ffffff'
+
+# Status bar content
+set -g status-left '#[bg=#7350E0,fg=#ffffff,bold] #S #[bg=#333366,fg=#7350E0]'
+set -g status-right '#[fg=#CA0DDE]#[bg=#CA0DDE,fg=#ffffff] %Y-%m-%d #[bg=#9D7CD8,fg=#ffffff] %H:%M:%S '
+set -g status-left-length 40
+set -g status-right-length 50
+
+# Window list formatting
+set -g window-status-format ' #I:#W '
+set -g window-status-current-format ' #I:#W '
+
 
 #Initialize TMUX Plugin Manager
 run -b '~/.tmux/plugins/tpm/tpm'
